[project]
name = "xai-nest"
version = "0.1.0"
description = "Xircuits component library for NEST Simulator."
authors = [{ name = "Sebastian Spreizer", email = "spreizer@web.de" }]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/babsey/xai_nest"
keywords = ["xircuits", "nest"]

# Xircuits-specific configurations
[tool.xircuits]
requirements_path = "requirements.txt"
default_example_path = "SingleNeuronSpikes.xircuits"
